--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/home/manidmt/.netbeans/23/build.properties
+user.properties.file=/home/ignacio/snap/netbeans/111/build.properties
