--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DBA_Practica2
 endorsed.classpath=
 excludes=
+file.reference.jade.jar=/home/ignacio/Escritorio/DBA/JADE-all-4.6.0/JADE-bin-4.6.0/jade/lib/jade.jar
 includes=**
 jar.compress=false
-javac.classpath=../../jade/lib/jade.jar
+javac.classpath=\
+    ${file.reference.jade.jar}
 #/${libs.JADE.classpath}
 
 
@@ -49,8 +51,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=21
-javac.target=21
+javac.source=17
+javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -76,7 +78,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=DBA_Practica2
-main.class=
+main.class=Practica2_Package.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
